arvore/calc.output
Grammar

    0 $accept: linha $end

    1 linha: linha comando ENTER
    2      | ε

    3 comando: expr
    4        | VAR ATRIB expr

    5 expr: NUM
    6     | VAR
    7     | expr MAIS expr
    8     | expr MENOS expr
    9     | expr VEZES expr
   10     | expr DIV expr
   11     | ABRE expr FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VAR (258) 4 6
    ATRIB (259) 4
    NUM (260) 5
    MAIS (261) 7
    MENOS (262) 8
    VEZES (263) 9
    DIV (264) 10
    ABRE (265) 11
    FECHA (266) 11
    ENTER (267) 1


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    linha (14)
        on left: 1 2
        on right: 0 1
    comando (15)
        on left: 3 4
        on right: 1
    expr (16)
        on left: 5 6 7 8 9 10 11
        on right: 3 4 7 8 9 10 11


State 0

    0 $accept: • linha $end

    $default  reduce using rule 2 (linha)

    linha  go to state 1


State 1

    0 $accept: linha • $end
    1 linha: linha • comando ENTER

    $end  shift, and go to state 2
    VAR   shift, and go to state 3
    NUM   shift, and go to state 4
    ABRE  shift, and go to state 5

    comando  go to state 6
    expr     go to state 7


State 2

    0 $accept: linha $end •

    $default  accept


State 3

    4 comando: VAR • ATRIB expr
    6 expr: VAR •

    ATRIB  shift, and go to state 8

    $default  reduce using rule 6 (expr)


State 4

    5 expr: NUM •

    $default  reduce using rule 5 (expr)


State 5

   11 expr: ABRE • expr FECHA

    VAR   shift, and go to state 9
    NUM   shift, and go to state 4
    ABRE  shift, and go to state 5

    expr  go to state 10


State 6

    1 linha: linha comando • ENTER

    ENTER  shift, and go to state 11


State 7

    3 comando: expr •
    7 expr: expr • MAIS expr
    8     | expr • MENOS expr
    9     | expr • VEZES expr
   10     | expr • DIV expr

    MAIS   shift, and go to state 12
    MENOS  shift, and go to state 13
    VEZES  shift, and go to state 14
    DIV    shift, and go to state 15

    $default  reduce using rule 3 (comando)


State 8

    4 comando: VAR ATRIB • expr

    VAR   shift, and go to state 9
    NUM   shift, and go to state 4
    ABRE  shift, and go to state 5

    expr  go to state 16


State 9

    6 expr: VAR •

    $default  reduce using rule 6 (expr)


State 10

    7 expr: expr • MAIS expr
    8     | expr • MENOS expr
    9     | expr • VEZES expr
   10     | expr • DIV expr
   11     | ABRE expr • FECHA

    MAIS   shift, and go to state 12
    MENOS  shift, and go to state 13
    VEZES  shift, and go to state 14
    DIV    shift, and go to state 15
    FECHA  shift, and go to state 17


State 11

    1 linha: linha comando ENTER •

    $default  reduce using rule 1 (linha)


State 12

    7 expr: expr MAIS • expr

    VAR   shift, and go to state 9
    NUM   shift, and go to state 4
    ABRE  shift, and go to state 5

    expr  go to state 18


State 13

    8 expr: expr MENOS • expr

    VAR   shift, and go to state 9
    NUM   shift, and go to state 4
    ABRE  shift, and go to state 5

    expr  go to state 19


State 14

    9 expr: expr VEZES • expr

    VAR   shift, and go to state 9
    NUM   shift, and go to state 4
    ABRE  shift, and go to state 5

    expr  go to state 20


State 15

   10 expr: expr DIV • expr

    VAR   shift, and go to state 9
    NUM   shift, and go to state 4
    ABRE  shift, and go to state 5

    expr  go to state 21


State 16

    4 comando: VAR ATRIB expr •
    7 expr: expr • MAIS expr
    8     | expr • MENOS expr
    9     | expr • VEZES expr
   10     | expr • DIV expr

    MAIS   shift, and go to state 12
    MENOS  shift, and go to state 13
    VEZES  shift, and go to state 14
    DIV    shift, and go to state 15

    $default  reduce using rule 4 (comando)


State 17

   11 expr: ABRE expr FECHA •

    $default  reduce using rule 11 (expr)


State 18

    7 expr: expr • MAIS expr
    7     | expr MAIS expr •
    8     | expr • MENOS expr
    9     | expr • VEZES expr
   10     | expr • DIV expr

    VEZES  shift, and go to state 14
    DIV    shift, and go to state 15

    $default  reduce using rule 7 (expr)


State 19

    7 expr: expr • MAIS expr
    8     | expr • MENOS expr
    8     | expr MENOS expr •
    9     | expr • VEZES expr
   10     | expr • DIV expr

    VEZES  shift, and go to state 14
    DIV    shift, and go to state 15

    $default  reduce using rule 8 (expr)


State 20

    7 expr: expr • MAIS expr
    8     | expr • MENOS expr
    9     | expr • VEZES expr
    9     | expr VEZES expr •
   10     | expr • DIV expr

    $default  reduce using rule 9 (expr)


State 21

    7 expr: expr • MAIS expr
    8     | expr • MENOS expr
    9     | expr • VEZES expr
   10     | expr • DIV expr
   10     | expr DIV expr •

    $default  reduce using rule 10 (expr)
